--- a/app/pages/404.ejs
+++ b/app/pages/404.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Not Found</title>
+    <link rel="icon" type="image/png" href="http://localhost/assets/img/DevCenterLogo.png">
+    <title>404 Not Found <%= location %></title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
         .middle {
@@ -13,23 +14,21 @@
             align-items: center;
             height: 100vh;
             text-align: center;
-            background-color: #f8f8f8;
+            flex-direction: column;
         }
 
         h1,
         h2 {
             font-family: 'Roboto', sans-serif;
-            color: #333;
+            margin: 10px 0;
         }
     </style>
 </head>
 
 <body>
     <div class="middle">
-        <div>
-            <h1>The request file was not found</h1>
-            <h2>File:{{fileName}}</h2>
-        </div>
+        <h1>404 Not Found</h1>
+        <h2>Not found <%= location %></h2>
     </div>
 </body>
 
