updated the web

--- a/app/pages/login.ejs
+++ b/app/pages/login.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/png" href="http://localhost/assets/img/DevCenterLogo.png">
+    <link rel="icon" type="image/png" href="/assets/img/DevCenterLogo.png">
     <title>Login</title>
     <%- include('style/light') %>
 </head>
@@ -27,28 +27,7 @@
         </div>
     </div>
 
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', async function (event) {
-            event.preventDefault();
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const response = await fetch('/api/v1/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ email, password })
-            });
-            if (response.ok) {
-                const data = await response.json();
-                alert(`Login successful! Access Token: ${data.accessToken}`);
-            } else if (response.status === 401) {
-                alert('Unauthorized: Invalid username or password.');
-            } else {
-                alert(`Unexpected error: ${response.status}`);
-            }
-        });
-    </script>
+    <script src="assets/js/login.js"></script>
 </body>
 
 </html>
