--- a/app/pages/register.ejs
+++ b/app/pages/register.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/png" href="http://localhost/assets/img/DevCenterLogo.png">
+    <link rel="icon" type="image/png" href="/assets/img/DevCenterLogo.png">
     <title>Register</title>
     <%- include('style/light') %>
 </head>
@@ -35,38 +35,7 @@
         </div>
     </div>
 
-    <script>
-        document.getElementById('registerForm').addEventListener('submit', async function (event) {
-            event.preventDefault();
-            const email = document.getElementById('email').value;
-            const username = document.getElementById('username').value;
-            const name = document.getElementById('name').value;
-            const password = document.getElementById('password').value;
-            const registerData = {
-                email: email,
-                username: username,
-                name: name,
-                password: password
-            };
-            const response = await fetch('/api/v1/register', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(registerData)
-            });
-            if (response.ok) {
-                const data = await response.json();
-                alert(`Registration successful! Access Token: ${data.accessToken}`);
-            } else if (response.status === 400) {
-                alert('Bad Request: All fields are required.');
-            } else if (response.status === 409) {
-                alert('Conflict: Username already exists.');
-            } else {
-                alert(`Unexpected error: ${response.status} - ${await response.text()}`);
-            }
-        });
-    </script>
+    <script src="assets/js/register.js"></script>
 </body>
 
 </html>
