Made more lite and fixed bugs

--- a/app/pages/index.ejs
+++ b/app/pages/index.ejs
@@ -7,4 +7,9 @@
     <%- include('style/light') %>
 </head>
 
+<body>
+    <h1>Hello</h1>
+    <script src="assets/js/conect.js"></script>
+</body>
+
 </html>
