--- a/app/pages/register.ejs
+++ b/app/pages/register.ejs
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <script src="assets/js/register.js"></script>
+    <script src="../assets/js/register.js"></script>
 </body>
 
 </html>
