updated the design, I'll make it better

--- a/app/pages/login.ejs
+++ b/app/pages/login.ejs
@@ -8,20 +8,22 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="box form-box">
-            <header>Login</header>
+    <div class="box" style="width: 500px; height: 400;">
+        <div>
+            <h1>Login</h1>
+            <br>
             <form id="loginForm">
-                <div class="field input">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required />
+                <div>
+                    <input class="input" type="email" id="email" name="email" required placeholder="Email" />
                 </div>
-                <div class="field input">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required />
+                <br>
+                <div>
+                    <input class="input" type="password" id="password" name="password" required
+                        placeholder="Password" />
                 </div>
-                <div class="field">
-                    <button class="btn" type="submit">Login</button>
+                <br>
+                <div>
+                    <button class="button" type="submit">Login</button>
                 </div>
             </form>
         </div>
