--- a/app/pages/404.ejs
+++ b/app/pages/404.ejs
@@ -7,12 +7,11 @@
     <link rel="icon" type="image/png" href="http://localhost/assets/img/DevCenterLogo.png">
     <title>404 Not Found <%= location %>
     </title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <%- include('style/light') %>
 </head>
 
 <body>
-    <div class="middle">
+    <div class="box">
         <h1>404 Not Found</h1>
         <h2>Not found <%= location %>
         </h2>
