--- a/app/pages/style/light.ejs
+++ b/app/pages/style/light.ejs
@@ -1,115 +1,68 @@
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
     :root {
         --accent: rgba(250, 142, 0, 0.808);
-    }
-
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: 'Poppins', sans-serif;
+        --theme: white;
+        --theme-ui: #fff8f4;
+        --text: #000;
     }
 
     body {
-        background: #e4e9f7;
+        background: var(--theme--ui);
     }
 
     h1,
-    h2 {
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: var(--text);
         font-family: 'Roboto', sans-serif;
         margin: 10px 0;
     }
 
     ::selection {
         background: var(--accent);
-        color: white;
-    }
-
-    .container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 90vh;
+        color: var(--theme);
     }
 
     .box {
-        background: #fdfdfd;
         display: flex;
         flex-direction: column;
-        padding: 25px 25px;
-        border-radius: 20px;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid var(--accent);
+        background-color: var(--theme-ui);
+        padding: 25px;
         box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1), 0 32px 64px -48px rgba(0, 0, 0, 0.5);
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        overflow: auto;
+        width: auto;
+        height: auto;
+        max-width: 100vh;
+        max-height: 100vh;
     }
 
-    .form-box {
-        width: 450px;
-        margin: 0px 10px;
-    }
-
-    .form-box header {
-        font-size: 25px;
-        font-weight: 600;
-        padding-bottom: 10px;
-        border-bottom: 1px solid #e6e6e6;
-        margin-bottom: 10px;
-    }
-
-    .form-box form .field {
-        display: flex;
-        margin-bottom: 10px;
-        flex-direction: column;
-    }
-
-    .form-box form .input input {
-        height: 40px;
-        width: 100%;
+    .input {
+        color: var(--text);
+        border: 2px solid var(--accent);
+        background-color: var(--theme-ui);
+        font-family: 'Roboto', sans-serif;
         font-size: 16px;
         padding: 0 10px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
         outline: none;
     }
 
-    .btn {
-        height: 35px;
-        background: var(--accent);
-        border: 0;
-        border-radius: 5px;
-        color: #fff;
-        font-size: 15px;
+    .button {
+        padding: 0 10px;
         cursor: pointer;
-        transition: all .3s;
-        margin-top: 10px;
-        padding: 0px 10px;
-    }
-
-    .btn:hover {
-        opacity: 0.82;
-    }
-
-    .middle {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        text-align: center;
-        flex-direction: column;
-    }
-
-    .file-list {
-        list-style-type: none;
-        padding: 0;
-        font-family: 'Roboto', sans-serif;
-    }
-
-    .file-list li {
-        background-color: #fff;
-        margin: 5px;
-        padding: 10px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        text-align: left;
+        height: 35px;
+        border-radius: 5px;
+        color: var(--text);
+        background-color: var(--accent);
     }
 </style>
