Worked at website, added 2 themes, fixed some errors

--- a/app/pages/404.ejs
+++ b/app/pages/404.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="http://localhost/assets/img/DevCenterLogo.png">
     <title>404 Not Found <%= location %>
     </title>
-    <%- include('style/light') %>
+    <%- include('style/theme') %>
 </head>
 
 <body>
