--- a/app/pages/index.ejs
+++ b/app/pages/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" type="image/png" href="/assets/img/DevCenterLogo.png">
     <title>DevCenter</title>
-    <%- include('style/light') %>
+    <%- include('style/theme') %>
 </head>
 
 <body>
