--- a/app/pages/shared.ejs
+++ b/app/pages/shared.ejs
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shared files: <%= location %>
     </title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <%- include('style/light') %>
+    <%- include('style/theme') %>
 </head>
 
 <body>
