Made shared files interactive

--- a/app/pages/login.ejs
+++ b/app/pages/login.ejs
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/png" href="/assets/img/DevCenterLogo.png">
-    <title>Login</title>
+    <link rel="icon" type="image/png" href="../assets/img/DevCenterLogo.png">
+    <title>Login - DevCenter</title>
     <%- include('style/theme') %>
 </head>
 
