--- a/app/pages/register.ejs
+++ b/app/pages/register.ejs
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/png" href="/assets/img/DevCenterLogo.png">
-    <title>Register</title>
+    <link rel="icon" type="image/png" href="../assets/img/DevCenterLogo.png">
+    <title>Register - DevCenter</title>
     <%- include('style/theme') %>
 </head>
 
