added the icons

--- a/app/pages/fragment/files.ejs
+++ b/app/pages/fragment/files.ejs
@@ -16,8 +16,8 @@
                     <% files.forEach(file=> { %>
                         <li>
                             📄 <a href="<%= file.url %>" download>
-                                <%= file.name %>
+                                %= file.name %>
                             </a> (Download)
-                        </li>
-                        <% }); %>
+                            /li>
+                            <% }); %>
 </ul>
