--- a/app/pages/fragment/files.ejs
+++ b/app/pages/fragment/files.ejs
@@ -1,23 +1,20 @@
-<h1>Directory: <%= location || '/' %>
-</h1>
-<ul>
-    <% if (directories.length===0 && files.length===0) { %>
-        <li>No files or directories found</li>
+<h1>Directory: <%= location || '/' %></h1>
+    <ul>
+        <% if (directories.length > 0) { %>
+            <li><strong>Directories</strong></li>
+            <% directories.forEach(dir => { %>
+                <li>
+                    📁<a href="<%= dir.url %>"><%= dir.name %></a>
+                </li>
+            <% }) %>
         <% } %>
 
-            <% directories.forEach(dir=> { %>
+        <% if (files.length > 0) { %>
+            <li><strong>Files</strong></li>
+            <% files.forEach(file => { %>
                 <li>
-                    📁 <a href="<%= dir.url %>">
-                        <%= dir.name %>
-                    </a>
+                    📄<a href="<%= file.url %>"><%= file.name %></a>
                 </li>
-                <% }); %>
-
-                    <% files.forEach(file=> { %>
-                        <li>
-                            📄 <a href="<%= file.url %>" download>
-                                %= file.name %>
-                            </a> (Download)
-                            /li>
-                            <% }); %>
-</ul>
+            <% }) %>
+        <% } %>
+    </ul>
