--- a/app/pages/style/light.ejs
+++ b/app/pages/style/light.ejs
@@ -16,7 +16,8 @@
     h3,
     h4,
     h5,
-    h6 {
+    h6,
+    strong {
         color: var(--text);
         font-family: 'Roboto', sans-serif;
         margin: 10px 0;
@@ -25,6 +26,10 @@
     ::selection {
         background: var(--accent);
         color: var(--text-selection);
+    }
+
+    a {
+        color: var(--accent);
     }
 
     .box {
